@@ -1,8 +1,9 @@
 package org.broadinstitute.ddp.route;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+import lombok.extern.slf4j.Slf4j;
+import one.util.streamex.StreamEx;
 import org.broadinstitute.ddp.constants.ErrorCodes;
 import org.broadinstitute.ddp.constants.RouteConstants.PathParam;
 import org.broadinstitute.ddp.db.TransactionWrapper;
@@ -13,17 +14,12 @@ import org.broadinstitute.ddp.json.errors.ApiError;
 import org.broadinstitute.ddp.json.mailinglist.GetMailingListResponse;
 import org.broadinstitute.ddp.util.ResponseUtil;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import spark.Request;
 import spark.Response;
 import spark.Route;
 
+@Slf4j
 public class GetMailingListRoute implements Route {
-
-    private static final Logger LOG = LoggerFactory.getLogger(GetMailingListRoute.class);
-
     @Override
     public List<GetMailingListResponse> handle(Request request, Response response) {
         String studyGuid = request.params(PathParam.STUDY_GUID);
@@ -34,11 +30,11 @@ public class GetMailingListRoute implements Route {
                         ResponseUtil.haltError(response, 404, new ApiError(ErrorCodes.NOT_FOUND, errMsg));
                     }
                     List<MailingListEntryDto> mailingListEntries = handle.attach(JdbiMailingList.class).findByStudy(studyGuid);
-                    LOG.info(
+                    log.info(
                             "Found {} mailing list mailingListEntries for the study {}",
                             mailingListEntries.size(), studyGuid
                     );
-                    return mailingListEntries.stream().map(e -> new GetMailingListResponse(e)).collect(Collectors.toList());
+                    return StreamEx.of(mailingListEntries).map(GetMailingListResponse::new).toList();
                 }
         );
     }
